<resources>
    <string name="app_name">Examen3</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">GUARDAR</string>
    <string name="login">Acceder</string>
    <string name="requisitosPassword">Debe tener al menos 8 caracteres, una mayuscula y una minuscula</string>
    <string name="prefs_file">PREFERENCE_FILE_KEY</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="phone">Telefono</string>
    <string name="address">Direccion</string>
    <string name="delete">BORRAR</string>
    <string name="edit">RECUPERAR</string>


</resources>